# RDAE-Robot-Data-Amplification-Engine

./: .gitignore  DESIGN_REVIEW.md  RESEARCH.md  STAGE1.md  WORKLOG.md  deep-research-report.md  pyproject.toml  requirements.txt
configs/: README.md  default.yaml
scripts/: README.md  evaluate.py  train.py
src/: __init__.py
src/data/: README.md  __init__.py  dataset.py  preprocessing.py
src/models/: README.md  __init__.py  action_decoder.py  encoder.py  sensor_decoder.py
src/simulation/: README.md  __init__.py  consistency.py
src/utils/: README.md  __init__.py  config.py  metrics.py
tests/: __init__.py
